# docker-airflow

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
airflow/: Dockerfile  _variables.py  airflow.cfg  init.sh  pyproject.toml  runserver.sh  setup.cfg  unittests.cfg
airflow/dags/: _system_refresh_config.py  example.py  example2.py  example_1.py  example_2.py
airflow/plugins/base/: dags.py  operators.py
airflow/plugins/opt/: default_args.py
airflow/plugins/task_base/: operators.py
airflow/plugins/tasks/: example.py
airflow/plugins/utils/: decorators.py  on_failure_callback.py
airflow/scripts/: _pools.py  docker_build.sh  fmt.sh  gen_fernet_key.py  gen_flask_secret_key.py  gen_user.py  init.sh  init_pools.py  init_users.py  init_variables.py  lint.sh  unit_server.sh
config/: airflow.cfg  unittests.cfg
scripts/: _gen_fernet_key.py  docker_build.sh  docker_push.sh  fmt.sh  lint.sh
