[tool.poetry]
name = "docker-airflow"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
apache-airflow = {version = "^2.0.0", extras = ["celery", "postgres", "redis"]}
flower = "^0.9.7"
python3-openid = "^3.2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.7.0"
mypy = "^0.800"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
force_single_line = true

[tool.pytest.ini_options]
# addopts = "--capture=no -x --doctest-modules -v --cov=. --cov-report=html"
addopts = "--capture=sys -x --doctest-modules -v --cov=. --cov-report=html"
cache_dir = "/tmp/.pytest_cache"
python_files = [
    "tests.py",
    "test_*.py",
]
python_classes = "Test"
python_functions = "test_"
testpaths = "."

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
